objects/FinServ__FinancialAccount__c.object
<CustomObject>
    <description>A client&apos;s financial account, such as an investment account, bank account, or insurance policy.</description>
    <fields>
        <fullName>AccNameAndNum__c</fullName>
        <description>Concated Acc Number and Name</description>
        <formula>FinServ__FinancialAccountNumber__c &amp;&apos; - &apos;&amp;  Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccNameAndNum</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alert_Reasons__c</fullName>
        <inlineHelpText>Set via Automation Rules</inlineHelpText>
        <label>Alert Reasons</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High Balance</fullName>
                </value>
                <value>
                    <fullName>Low Balance</fullName>
                </value>
                <value>
                    <fullName>Locked</fullName>
                </value>
                <value>
                    <fullName>Large Withdrawal</fullName>
                </value>
                <value>
                    <fullName>NSF</fullName>
                </value>
                <value>
                    <fullName>Large Deposit</fullName>
                </value>
                <value>
                    <fullName>Potential Fraud</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Alert__c</fullName>
        <formula>CASE( Alert_Reasons__c ,
&quot;High Balance&quot;,&quot;🟠&quot;,
&quot;Large Deposit&quot;,&quot;🟠&quot;,
&quot;Potential Fraud&quot;,&quot;🟠&quot;,
&quot;Low Balance&quot;,&quot;🟡&quot;,
&quot;Locked&quot;,&quot;🔴&quot;,
&quot;Large Withdrawal&quot;,&quot;🟡&quot;,
&quot;NSF&quot;,&quot;🔴&quot;,
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Alert</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Community_Financial_Account_Match__c</fullName>
        <formula>FinServ__PrimaryOwner__c  =   $User.Account_Id_Formula__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Community Financial Account Match</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DaysSinceLastDisclosure__c</fullName>
        <formula>TODAY() - LastDisclosureDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Last Disclosure</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FINS_Disbursed_Amount__c</fullName>
        <label>Disbursed Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FINS_Duration_in_months__c</fullName>
        <label>Duration (in months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FINS_EMI_Frequency__c</fullName>
        <label>EMI Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FINS_Individual_Borrower__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Individual Borrower</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Loan Accounts</relationshipLabel>
        <relationshipName>Financial_Loan_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FINS_Interest_Rate__c</fullName>
        <label>Interest Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FINS_Lending_Buyers_Agent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Buyers Agent</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Financial Accounts (Buyers Agent)</relationshipLabel>
        <relationshipName>Financial_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FINS_Lending_Sellers_Agent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sellers Agent</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Financial Accounts (Sellers Agent)</relationshipLabel>
        <relationshipName>Financial_Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FINS_Lending_Settlement_Agent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Settlement Agent</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Financial Accounts (Settlement Agent)</relationshipLabel>
        <relationshipName>Financial_Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FINS_Loan_Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Loan Application</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Loan Accounts</relationshipLabel>
        <relationshipName>Financial_Loan_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FINS_NACH_Status__c</fullName>
        <label>NACH Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Bounced</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FINS_POA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Power of Attorney</inlineHelpText>
        <label>POA</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Financial Accounts (POA)</relationshipLabel>
        <relationshipName>POA_Financial_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FINS_Q_Branch_Demo_Reference__c</fullName>
        <description>Field choice selection indicates that the corresponding record is referenced in one or more official Q-Branch demo guides.</description>
        <label>Q-Branch Demo Reference</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FINS_Q_Branch_Demo_Guide</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>FINS_RecordTypeDevName__c</fullName>
        <description>Returns the developer name of the financial account record type</description>
        <formula>RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type Dev Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FINS_Retail_Investigation_Trend_Report__c</fullName>
        <label>Investigation Trend Report</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FinServ__APY__c</fullName>
        <label>APY</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FinServ__AccrualFrequency__c</fullName>
        <description>The frequency the interest is accrued on the financial account.</description>
        <label>Accrual Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                    <default>true</default>
                    <label>Daily</label>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Annual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__AccruedInterest__c</fullName>
        <description>The interest accrued on the financial account in the current statement period.</description>
        <label>Accrued Interest</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__Address1__c</fullName>
        <description>Street address line 1 for mailing address.</description>
        <label>Address 1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__Address2__c</fullName>
        <description>Street address line 2 for mailing address.</description>
        <label>Address 2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__ApplicationDate__c</fullName>
        <description>Date when the client submitted the financial account application.</description>
        <label>Application Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FinServ__AssetRebalance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Asset Rebalance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinServ__AvailableCredit__c</fullName>
        <label>Available Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__AverageBalance__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Average Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__BalanceLastStatement__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Balance Last Statement</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__Balance__c</fullName>
        <label>Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__BookedDate__c</fullName>
        <label>Booked Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FinServ__BranchCode__c</fullName>
        <description>The branch code of the financial account.</description>
        <label>Branch Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__BranchName__c</fullName>
        <description>The branch name of the financial account.</description>
        <label>Branch Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__CashBalance__c</fullName>
        <label>Cash Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__CashLimit__c</fullName>
        <label>Cash Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__City__c</fullName>
        <description>City for mailing address.</description>
        <label>City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__CloseDate__c</fullName>
        <label>Date Closed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FinServ__ClosureReason__c</fullName>
        <description>Reason for closing the financial account.</description>
        <label>Closure Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account Maintenance Fees</fullName>
                </value>
                <value>
                    <fullName>Account no longer needed</fullName>
                </value>
                <value>
                    <fullName>Moved out of the country</fullName>
                </value>
                <value>
                    <fullName>Not able to maintain account</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__CollateralDesc__c</fullName>
        <label>Collateral Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__Country__c</fullName>
        <description>Country for mailing address.</description>
        <label>Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__CreatedByMe__c</fullName>
        <formula>IF( CreatedBy.Id  = $User.Id , 1 , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created By Me</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FinServ__CurrentPostedBalance__c</fullName>
        <label>Current Posted Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__DailyWithdrawalLimit__c</fullName>
        <label>Daily Withdrawal Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FinServ__Discretionary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Advisor has discretionary trading authority for this financial account.</description>
        <label>Discretionary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinServ__DrawPeriodMonths__c</fullName>
        <label>Draw Period(months)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FinServ__EscrowBalance__c</fullName>
        <label>Escrow Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__ExpectedCloseDate__c</fullName>
        <label>Expected Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FinServ__FinancialAccountChargesAndFees__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Charges And Fees</label>
        <referenceTo>FinServ__ChargesAndFees__c</referenceTo>
        <relationshipLabel>Financial Accounts</relationshipLabel>
        <relationshipName>FinancialAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__FinancialAccountNumber__c</fullName>
        <externalId>true</externalId>
        <label>Account Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__FinancialAccountSource__c</fullName>
        <description>Indicates source of financial account data, such as a third party integration or manual entry.</description>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Integrator</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Manual Entry</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__FinancialAccountType__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Brokerage</fullName>
                </value>
                <value>
                    <fullName>Discount Brokerage</fullName>
                </value>
                <value>
                    <fullName>CD</fullName>
                </value>
                <value>
                    <fullName>Checking</fullName>
                </value>
                <value>
                    <fullName>Cash Management Account</fullName>
                </value>
                <value>
                    <fullName>Credit Card</fullName>
                </value>
                <value>
                    <fullName>Savings</fullName>
                </value>
                <value>
                    <fullName>Mutual Fund</fullName>
                </value>
                <value>
                    <fullName>Fixed Annuity</fullName>
                </value>
                <value>
                    <fullName>Variable Annuity</fullName>
                </value>
                <value>
                    <fullName>Managed Account</fullName>
                </value>
                <value>
                    <fullName>Individual Life</fullName>
                </value>
                <value>
                    <fullName>Term Life</fullName>
                </value>
                <value>
                    <fullName>Variable Life</fullName>
                </value>
                <value>
                    <fullName>Whole Life</fullName>
                </value>
                <value>
                    <fullName>Term Loan</fullName>
                </value>
                <value>
                    <fullName>Retirement Account</fullName>
                </value>
                <value>
                    <fullName>Mortgage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__HardwareSerial__c</fullName>
        <description>The serial number of hardware associated with the account.</description>
        <label>Hardware Serial</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__HeldAway__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether this financial account is managed or administered by our firm.</description>
        <label>Held Away</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinServ__HoldingCount__c</fullName>
        <description>Number of holdings within this financial account</description>
        <label>Number of Holdings</label>
        <summaryForeignKey>FinServ__FinancialHolding__c.FinServ__FinancialAccount__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>FinServ__Household__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Household that this financial account rolls up to.</description>
        <label>Household</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Household</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Household Financial Accounts</relationshipLabel>
        <relationshipName>HouseholdFinancialAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__IncomingVolume__c</fullName>
        <description>The volume of transactions coming in through the service.</description>
        <label>Incoming Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FinServ__InsurancePaidYearToDate__c</fullName>
        <description>The total amount of insurance paid in the current tax year.</description>
        <label>Insurance Paid Year To Date</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__InsurancePolicy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Insurance Policy</label>
        <referenceTo>InsurancePolicy</referenceTo>
        <relationshipLabel>Financial Accounts</relationshipLabel>
        <relationshipName>FAInsurancePolicy</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__InsuredAmount__c</fullName>
        <label>Insured Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__InterestBalance__c</fullName>
        <description>The interest balance on the financial account.</description>
        <label>Interest Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__InterestPaidYearToDate__c</fullName>
        <description>The total amount of interest paid in the current tax year.</description>
        <label>Interest Paid Year To Date</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__InterestRate__c</fullName>
        <label>Interest Rate</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FinServ__InvestmentObjectives__c</fullName>
        <label>Investment Objectives</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Safety</fullName>
                </value>
                <value>
                    <fullName>Income</fullName>
                </value>
                <value>
                    <fullName>Growth</fullName>
                </value>
                <value>
                    <fullName>Tax Optimization</fullName>
                </value>
                <value>
                    <fullName>Liquidity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__JointOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Joint Owner</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>notEqual</operation>
                <value>IndustriesHousehold</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Financial Account Joint Owner</relationshipLabel>
        <relationshipName>FAJointOwner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__LastTransactionDate__c</fullName>
        <label>Last Transaction Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FinServ__LastUpdated__c</fullName>
        <label>Last Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FinServ__LienHolder__c</fullName>
        <label>Lien Holder</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__LoanAmount__c</fullName>
        <label>Loan Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__LoanEndDate__c</fullName>
        <label>Loan End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FinServ__LoanTermMonths__c</fullName>
        <label>Loan Term(months)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FinServ__Managed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether this financial account is actively managed by our firm.</description>
        <label>Managed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinServ__MinimumBalance__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Minimum Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__MinimumPayment__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Minimum Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__ModelPortfolio__c</fullName>
        <description>The model asset allocation for this financial account.</description>
        <label>Model Portfolio</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Conservative</fullName>
                </value>
                <value>
                    <fullName>Moderate</fullName>
                </value>
                <value>
                    <fullName>Balanced</fullName>
                </value>
                <value>
                    <fullName>Growth</fullName>
                </value>
                <value>
                    <fullName>Aggressive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__NextStatementDate__c</fullName>
        <description>Next statement date.</description>
        <label>Next Statement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FinServ__Nickname__c</fullName>
        <label>Nickname</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__OpenDate__c</fullName>
        <label>Date Opened</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FinServ__OutgoingVolume__c</fullName>
        <description>The volume of transactions going out through the service.</description>
        <label>Outgoing Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FinServ__OverdraftAllowed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OverdraftAllowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinServ__OverdraftLinkedAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Overdraft/Linked Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Financial Accounts (Overdraft Linked Account)</relationshipLabel>
        <relationshipName>FinancialAccount_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__OverdraftProtection__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether or not the customer accepts overdraft protection and its associated fees.</description>
        <label>Overdraft Protection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinServ__OwnerType__c</fullName>
        <label>Owner Type</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__Ownership__c</fullName>
        <label>Ownership</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Individual</fullName>
                </value>
                <value>
                    <fullName>Joint</fullName>
                </value>
                <value>
                    <fullName>Trust</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__PaperlessDelivery__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Deliver documents electronically.</description>
        <label>Paperless Delivery</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinServ__PaymentAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__PaymentDueDate__c</fullName>
        <label>Payment Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FinServ__PaymentFrequency__c</fullName>
        <label>Payment Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Biweekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quaterly</fullName>
                </value>
                <value>
                    <fullName>Semiannual</fullName>
                </value>
                <value>
                    <fullName>Annual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__PendingDeposits__c</fullName>
        <label>Pending Deposits</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__PendingWithdrawals__c</fullName>
        <label>Pending Withdrawals</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__Performance1Yr__c</fullName>
        <label>Performance 1Yr</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FinServ__Performance3Yr__c</fullName>
        <label>Performance 3Yr</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FinServ__PerformanceMTD__c</fullName>
        <label>Performance MTD</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FinServ__PerformanceQTD__c</fullName>
        <label>Performance QTD</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FinServ__PerformanceYTD__c</fullName>
        <label>Performance YTD</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FinServ__PolicyTerm__c</fullName>
        <description>Length of time the policyholder pays an insurance premium.</description>
        <label>Policy Term</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>6 Months</fullName>
                </value>
                <value>
                    <fullName>1 Year</fullName>
                </value>
                <value>
                    <fullName>2 Years</fullName>
                </value>
                <value>
                    <fullName>3 Years</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__PostalCode__c</fullName>
        <description>Postal code for mailing address.</description>
        <label>Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__Premium__c</fullName>
        <label>Premium</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__PrimaryBankerIdentifier__c</fullName>
        <description>The unique identifier of the primary banker who manages the financial account.</description>
        <label>Primary Banker Identifier</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__PrimaryBankerName__c</fullName>
        <description>The name of the primary banker who manages the financial account.</description>
        <label>Primary Banker Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__PrimaryOwner__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Primary Owner</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>notEqual</operation>
                <value>IndustriesHousehold</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Financial Account Primary Owner</relationshipLabel>
        <relationshipName>ClientFinancialAccounts</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
</CustomObject>